# nged

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  agent.md  xmake.lua
doc/: README.md  SUMMARY.md  教程.md
doc/backend/: ImGuiNodeGraphEditor.md
doc/core/: Graph.md  GraphItem.md  GraphItemPool.md  GraphTraverseResult.md  Link.md  Node.md  NodeGraphDoc.md  NodeGraphEditor.md
doc/graphics/: Canvas.md  UIStyle.md
doc/interaction/: CommandManager.md  NodeGraphEditResponser.md
doc/utils/: MessageHub.md  TypeSystem.md
doc/views/: GraphView.md  InspectorView.md  NetworkView.md
examples/demo/: main.cpp
examples/ngs7/: main.cpp  ngs7.cpp  s7-extensions.cpp
examples/pydemo/: dataview.py  edresponse.py  evaluation.py  graph.py  libpandas.py  main.py  node.py  nodelib.py  test_headless.py
examples/pydemo/examples/: pydemo-merge-licenses.ng
examples/typed_demo/: main.cpp
include/nged/: event.h  gmath.h  ngdoc.h  nged.h  nged_imgui.h  ngpy.h  style.h
include/nged/entry/: entry.h  texture.h
include/nged/ngdoc/: canvas.h  msghub.h  types.h
nged/: msghub.py
python/: CMakeLists.txt
scripts/: build_stubs.py
src/: ngdoc.cpp  nged.cpp  nged_imgui.cpp  nged_imgui_fonts.cpp  ngpy.cpp  pybind11_imgui.cpp  style.cpp
src/entry/: entry.cpp  gl2_main.cpp  gl_texture.cpp  raylib_main.cpp  raylib_texture.cpp
src/res/: licenses.inl
tests/: graph_tests.cpp  pytest.py  test_event_system.cpp
